# Holio-As-2025-10-28T22-03-06

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/apis/ai_agent_tools/: __init__.py
backend/app/apis/ai_context/: __init__.py
backend/app/apis/api_scraper/: __init__.py
backend/app/apis/errors/: __init__.py
backend/app/apis/github/: __init__.py
backend/app/apis/installed_packages/: __init__.py
backend/app/apis/package_manager/: __init__.py
backend/app/apis/preview/: __init__.py
backend/app/apis/project_backend_manager/: __init__.py
backend/app/apis/projects/: __init__.py
backend/app/libs/: ai_context_loader.py  ai_orchestrator.py  ai_system_prompt.py  ai_tool_registry.py  code_validator.py  database.py  github_client.py  models.py  package_detector.py  riff_source_reference.py
frontend/: package.json
frontend/src/components/: ChatHistory.tsx  ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  CodeEditor.tsx  CodeHighlight.tsx  CodePreview.tsx  CodeView.tsx  ErrorPanel.tsx  FileTree.tsx  GitHubPushButton.tsx  PreviewPanel.tsx  TaskBoard.tsx
frontend/src/pages/: AIChatWorkspace.tsx  ApiScraperPage.tsx  App.tsx  GitHub.tsx  InstalledPackagesPage.tsx  Projects.tsx  TestAgentTools.tsx  TestPreviewBuild.tsx
frontend/src/utils/: workspaceStore.ts
